Decouple services from DTOs and map in controllers