@@ -1,11 +1,8 @@
 package com.bookstore.service;
 
-import com.bookstore.dto.CheckoutRequest;
-import com.bookstore.dto.OrderDTO;
 import com.bookstore.entity.*;
 import com.bookstore.exception.BadRequestException;
 import com.bookstore.exception.ResourceNotFoundException;
-import com.bookstore.mapper.OrderMapper;
 import com.bookstore.repository.BookRepository;
 import com.bookstore.repository.OrderRepository;
 import com.bookstore.validation.OwnershipValidator;
@@ -14,7 +11,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class OrderService {
@@ -22,23 +18,20 @@ public class OrderService {
     private final OrderRepository orderRepository;
     private final CartService cartService;
     private final BookRepository bookRepository;
-    private final OrderMapper orderMapper;
     private final OwnershipValidator ownershipValidator;
 
     public OrderService(OrderRepository orderRepository,
             CartService cartService,
             BookRepository bookRepository,
-            OrderMapper orderMapper,
             OwnershipValidator ownershipValidator) {
         this.orderRepository = orderRepository;
         this.cartService = cartService;
         this.bookRepository = bookRepository;
-        this.orderMapper = orderMapper;
         this.ownershipValidator = ownershipValidator;
     }
 
     @Transactional
-    public OrderDTO checkout(User user, CheckoutRequest request) {
+    public Order checkout(User user, String shippingAddress) {
         List<CartItem> cartItems = cartService.getCartItems(user);
 
         if (cartItems.isEmpty()) {
@@ -57,7 +50,7 @@ public class OrderService {
         // Create order
         Order order = Order.builder()
                 .user(user)
-                .shippingAddress(request.getShippingAddress())
+                .shippingAddress(shippingAddress)
                 .status(OrderStatus.CONFIRMED)
                 .build();
 
@@ -88,22 +81,21 @@ public class OrderService {
         // Clear the cart
         cartService.clearCart(user);
 
-        return orderMapper.toDTO(savedOrder);
+        return savedOrder;
     }
 
-    public List<OrderDTO> getUserOrders(User user) {
+    public List<Order> getUserOrders(User user) {
         return orderRepository.findByUserIdOrderByCreatedAtDesc(user.getId())
                 .stream()
-                .map(orderMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public OrderDTO getOrderById(User user, Long orderId) {
+    public Order getOrderById(User user, Long orderId) {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new ResourceNotFoundException("Order", "id", orderId));
 
         ownershipValidator.validateOrderOwnership(user, order);
 
-        return orderMapper.toDTO(order);
+        return order;
     }
 }
